# stock-trading-mobile-app

./: LICENSE  README.md
backend/fastapi/: README.md  pyproject.toml
