[tool.poetry]
name = "Api Server"
version = "0.1.0"
description = "Api server for the project"
authors = ["Andreas Spannagel <spannagel.andreas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {version = "^0.21.1", extras = ["standard"]}
SQLAlchemy = {version = "^2.0.9", extras = ["asyncio"]}
alembic = "^alembic 1.10.3"
asyncpg = {version = "^0.27.0", extras = ["sa"]}
psycopg2-binary = "^2.9.6"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-cov = "^3.0.0"
black = "^23.3.0"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"